--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -71,7 +71,7 @@ textarea {
 }
 
 .timeLabel {
-  background-color: black;
+  background-color: slategray;
   color: white;
   text-align: center;
   padding-top: 40px;
